--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.15.0",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "iron-session": "^8.0.4",
