--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
     "@mui/material": "^7.1.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.15.0",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
+    "googleapis": "^149.0.0",
     "iron-session": "^8.0.4",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
