--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "google-spreadsheet": "^4.1.4",
     "googleapis": "^149.0.0",
     "iron-session": "^8.0.4",
+    "lru-cache": "^11.1.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
