--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.6.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "formidable": "^3.5.4",
